--- a/src/AppBundle/Resources/style/css/main.css
+++ b/src/AppBundle/Resources/style/css/main.css
@@ -30,10 +30,11 @@ h3
     background-color: rgba(0, 0, 0, 0);
 }
 
-h4
-{
+h4 {
+    color: #ffffff;
     font-weight: 400;
     font-size: 20px;
+    margin: 0;
 }
 
 /* Paragraph & Typographic */
