--- a/src/AppBundle/Resources/views/TestPages/question.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/question.html.twig
@@ -51,7 +51,9 @@
                         {{ form_widget(form.next, {'attr': {'class': 'btn btn-3'}}) }} <br>
                         {{ form_widget(form.submit, {'attr': {'class': 'btn btn-danger'}}) }} <br>
                         {{ form_end(form) }}
-                        <input type="button" id="solve" class="btn btn-danger" value="Solve it">
+                        <div class="alertD">
+                            <input type="button" id="solve" class="btn btn-danger" value="Solve it">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -102,10 +104,10 @@
         countdown($('#seconds'), $('#minutes'), $('#hours'), '{{ app.session.get('endsAt')|date('U') }}');
         sendAnswers("input[name^='test_question[answers]']", '{{ path('questionChosen') }}', '{{ current.id }}');
         {% if solved %}
-            solveIt('{{ path('solveIt') }}', '{{ current.id }}', $('.alert input'), $('#explanation'));
+            solveIt('{{ path('solveIt') }}', '{{ current.id }}', $('.alertD input'), $('#explanation'));
         {% endif %}
         $('#solve').on('click', function () {
-            solveIt('{{ path('solveIt') }}', '{{ current.id }}',$('.alert input'), $('#explanation'));
+            solveIt('{{ path('solveIt') }}', '{{ current.id }}',$('.alertD input'), $('#explanation'));
         });
 
         reportQuestion($("form[name='question_report']"), '{{ path('report') }}', '{{ current.id }}');
