--- a/src/AppBundle/Resources/views/Questions/myReports.html.twig
+++ b/src/AppBundle/Resources/views/Questions/myReports.html.twig
@@ -8,6 +8,7 @@
 
 {% block body %}
     <div class="container">
+        <div id="contact">
         <ul class="pagination pagination-sm">
             {# `«` arrow  #}
             <li {{ thisPage == 1 ? 'class="disabled"' }}>
@@ -66,6 +67,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 {% endblock %}
