--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -190,8 +190,6 @@ body {
   font-family: "Times New Roman";
   display: inline-block;
   padding: 5px;
-  border-radius: 2px;
-  border-color: inherit;
 }
 .color-background-text:hover {
   color: inherit;
@@ -317,7 +315,8 @@ label{
 }
 
 .curvy{
-  border-radius: 20%;
+  width: 40px;
+  height: 40px;
 }
 
 .mg-0{
