--- a/src/AppBundle/Resources/views/TestPages/results.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/results.html.twig
@@ -18,15 +18,13 @@
                                 {% if app.session.get('isCorrect')[question.id]  %}
                                     {% set correct = correct + 1 %}
                                     {% if question.id == current.id %}
-                                        <b><button class="mg-bot-10 curvy"><a title="{{ question.title }}"
-                                                                        class="dd88 color-background-text" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a></button></b>
+                                        <b><a title="{{ question.title }}" class="dd88 color-background-text" href="{{ path('testResults', {'id': question.id }) }}"><button class="curvy">{{ loop.index }}</button></a></b>
                                     {% else %}
                                         <a title="{{ question.title }}" class="dd88 color-background-text" href="{{ path('testResults', {'id': question.id }) }}"><button class="curvy">{{ loop.index }}</button></a>
                                     {% endif %}
                                 {% else %}
                                     {% if question.id == current.id %}
-                                        <b><button class="mg-bot-10 curvy"><a title="{{ question.title }}"
-                                                                        class="dd77 color-background-text" href="{{ path('testResults', {'id': question.id }) }}">{{ loop.index }}</a></button></b>
+                                        <b><a title="{{ question.title }}" class="dd77 color-background-text" href="{{ path('testResults', {'id': question.id }) }}"><button class="curvy">{{ loop.index }}</button></a></b>
                                     {% else %}
                                         <a title="{{ question.title }}" class="dd77 color-background-text" href="{{ path('testResults', {'id': question.id }) }}"><button class="curvy">{{ loop.index }}</button></a>
                                     {% endif %}
@@ -151,6 +149,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script>
+        $("#test_question_submit").hide();
         reportQuestion($("form[name='question_report']"), '{{ path('report') }}', '{{ current.id }}');
     </script>
 {% endblock %}
