--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -12,8 +12,8 @@
             <div class="container">
                 <div class="row mt">
                     <div class="col-lg-6">
-                        <h1 class="crlgr bold500">Learn PHP<br />Without any difficulties.</h1>
-                        <h3>Keep up with <span class="yellow">{</span> with with <span class="yellow">}</span> friends and latest features of PHP.</h3>
+                        <h1 class="crlgr bold500">Learn PHP<br />Without any difficulties<br />Want to know how?</h1>
+                        <h3>Testify is a php testing platform and it will help you and us to improve our php knowledge</h3>
                     </div>
                     <!-- /col-lg-6 -->
                     <div class="col-lg-6">
@@ -33,17 +33,18 @@
             <div class="row mt centered">
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser01.png') }}" width="180" alt="">
-                    <p class="white-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                    <p class="white-text bold500">Report wrong questions and create new ones</p>
                 </div>
                 <!--/col-lg-4 -->
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser02.png') }}" width="180" alt="">
-                    <p class="white-text" >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                    <p class="white-text bold500">Track progress and notice your weak spots </p>
                 </div>
                 <!--/col-lg-4 -->
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser03.png') }}" width="180" alt="">
-                    <p class="white-text bold500">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>                </div>
+                    <p class="white-text bold500">Improve yourself by solving personalised questions</p>
+                </div>
                 <!--/col-lg-4 -->
             </div>
             <!-- /row -->
