margin at radiobox

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -34,20 +34,19 @@
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser01.png') }}" width="180" alt="">
                     <h4>1 - Browser Compatibility</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                    <p class="white-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
                 </div>
                 <!--/col-lg-4 -->
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser02.png') }}" width="180" alt="">
                     <h4>2 - Email Campaigns</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                    <p class="white-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
                 </div>
                 <!--/col-lg-4 -->
                 <div class="col-lg-4">
                     <img src="{{ asset('images/ser03.png') }}" width="180" alt="">
                     <h4>3 - Documentation</h4>
-                    <h2 class="bungeeS boldS font-20 allign-center"><a class="" href="http://php.net/docs.php">PHP documentation</a></h2>
-                    <h2 class="bungeeS boldS font-20 allign-center"><a class="" href="https://www.digitalocean.com/company/blog/getting-ready-for-php-7/">Getting Ready for PHP 7</a></h2>
+                    <p class="white-text">agl;agdg</p>
                 </div>
                 <!--/col-lg-4 -->
             </div>
