--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -36,7 +36,7 @@
                     {%  if app.user %}
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle dropdown-2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="{{ app.user.avatar }}"  class="img-circle" height="40" width="40">
+                                <a href="#" class="dropdown-toggle dropdown-2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.name }}<img src="{{ app.user.avatar }}"  class="img-circle" height="40" width="40">
                                 </a>
 
                                 <ul class="dropdown-menu position-topmost">
